[build-system]
requires = ["setuptools >= 64", "setuptools-git-versioning >= 2.0, < 3"]
build-backend = "setuptools.build_meta"

[project]
name = "pyedsdk"
version = "0.1.0"
dependencies = [
    "pywin32>=306; platform_system == 'Windows'"
]

[tool.setuptools.packages.find]
where = ["pyedsdk"]

[project.optional-dependencies]
dev = ["pytest", "pytest-timeout"]

[tool.pytest.ini_options]
markers = [
    "hardware: tests requiring real camera hardware"
]