[build-system]
requires = ["setuptools >= 64", "setuptools-git-versioning >= 2.0, < 3"]
build-backend = "setuptools.build_meta"

[project]
name = "pyedsdk"
dynamic = ["version"]
description = "Python binding for the Canon EOS SDK library"
authors = [
    { name = "François Margall, email = "fr.margall@proton.me" },
]
dependencies = [
    "pywin32>=306; platform_system == 'Windows'"
]
readme = "README.md"
keywords = ["binding", "camera", "canon", "eos", "sdk", "wrapper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
license = "MIT"
license-files = ["LICENSE.txt"]

[project.urls]
Repository = "https://github.com/fmargall/pyedsdk.git"
Tracker = "https://github.com/fmargall/pyedsdk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyedsdk*"]

[project.optional-dependencies]
dev = ["pytest", "pytest-timeout"]

[tool.pytest.ini_options]
markers = [
    "hardware: tests requiring real camera hardware"
]

[tool.setuptools-git-versioning]
enabled = true
dirty_template = "{tag}"
